Add events feature, UI components and Supabase setup
Introduce core events functionality and DB infra: new event routes (list, detail, create, not-found) and a server action to create events. Add reusable UI components (Card, Button) and event components (EventCard, EventCardList, EventForm) plus an index export. Implement lib helpers and types (src/lib/events.ts, src/lib/types.ts) to centralize Supabase queries (getEvents, getEventById, getVenues). Refactor homepage to use the new components, update globals.css to default dark theme and set layout metadata/lang to Spanish. Add Supabase config, migrations, README and .gitignore, and npm scripts to pull DB and generate types.

--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "eslint"
+    "lint": "eslint",
+    "supabase:db-pull": "npx supabase db pull",
+    "supabase:gen-types": "npx supabase gen types typescript -o src/lib/database.types.ts"
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.95.3",
