--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "supabase:gen-types": "npx supabase gen types typescript -o src/lib/database.types.ts"
   },
   "dependencies": {
+    "@supabase/ssr": "^0.8.0",
     "@supabase/supabase-js": "^2.95.3",
     "next": "16.1.6",
     "react": "19.2.3",
